# telegram-translator-bot

./: .env  .replit  index.html  main.py  pyproject.toml  requirements.txt
templates/: index.html
